# nodestuff

./: CMakeLists.txt  buildshaders.bat  graph.h  grapheval.cpp  grapheval.h  gui.cpp  gui.h  imgui.frag.qsb  imgui.vert.qsb  main.cpp  nodeconstructors.cpp  nodeconstructors.h  nodestuff.code-workspace  nodetypes.h  portdata.h
